--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Hector B</a>.
     </footer>
   </body>
 </html>
