--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1>FAQs</h1>
       </div>
       <div class="faqs__accordion">
-        <input type="radio" name="faqs" id="faqs-1" />
+        <input type="radio" name="faqs" id="faqs-1" checked />
         <label for="faqs-1"
           >What is Frontend Mentor, and how will it help me?</label
         >
