--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <br />
         <input type="radio" name="faqs" id="faqs-4" />
         <label for="faqs-4"
-          >How can I get help if I'm stuck on a Frontend Mentor
-          challenge?</label
+          >How can I get help if I'm stuck on a challenge?</label
         >
         <p>
           The best place to get help is inside Frontend Mentor's Discord
